Updated JSCS rules

--- a/.jscsrc
+++ b/.jscsrc
@@ -14,8 +14,8 @@
     "disallowTrailingWhitespace": true,
     "disallowYodaConditions": true,
     "maximumLineLength": 120,
+    "requireBlocksOnNewline": 1,
     "requireCamelCaseOrUpperCaseIdentifiers": "ignoreProperties",
-    "requireCapitalizedComments": true,
     "requireCommaBeforeLineBreak": true,
     "requireDotNotation": true,
     "requireLineFeedAtFileEnd": true,
