--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "author": "Pete West <peterjwest3@gmail.com> (https://github.com/peterjwest/)",
   "license": "MIT",
   "dependencies": {
-    "lodash": "*3.10.1"
+    "lodash": "~3.10.1"
   },
   "devDependencies": {
-    "gulp": "*3.9.0",
-    "gulp-coveralls": "*0.1.4",
-    "gulp-istanbul": "*0.10.0",
-    "gulp-jscs": "*2.0.0",
-    "gulp-mocha": "*2.1.3",
-    "gulp-sequence": "*0.4.0",
-    "istanbul-text-full-reporter": "*0.1.2"
+    "gulp": "~3.9.0",
+    "gulp-coveralls": "~0.1.4",
+    "gulp-istanbul": "~0.10.0",
+    "gulp-jscs": "~2.0.0",
+    "gulp-mocha": "~2.1.3",
+    "gulp-sequence": "~0.4.0",
+    "istanbul-text-full-reporter": "~0.1.2",
+    "sinon": "~1.15.4"
   },
   "repository": {
     "type": "git",
